# Js_GJ_StampTour_Server2024

./: .gitignore  Cargo.toml  README.md  grahp.md
.github/workflows/: rust.yml
src/: main.rs
src/resources/: NFCTagList.txt  README.md
src/resources/PoC_Archive/: info.html  map.html  stamp.html
src/resources/api/: classList.json  stampList.json
src/resources/css/: MapView.css  StampListView.css  StampView.css  font.css  index.css  root.css
src/resources/database/: stamp_status.json  user_status.json
src/resources/html/: Error.html  buddha.html  check.html  error401.html  error404.html  guide.html  index list.html  index old.html  index.html  login.html  login_form.html  player.html  scanner.html  stamp_check_page.html  wallet.html
src/resources/js/: JsAPI.js  index.js  root.js
src/resources/scripts/: JsAPI.js  index list.js  index.js  root.js
src/resources/videos/: Guide_NFC_Bottom.mov  Guide_NFC_Bottom.webm  Guide_NFC_Center.mov  Guide_NFC_Center.webm  Guide_NFC_NoNFC.mov  Guide_NFC_NoNFC.webm  Guide_NFC_iPhone.mov  Guide_NFC_iPhone.webm  success.mov
