[package]
name = "GJ_StampTour"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
openssl = { version = "0.10", features = ["vendored"] }
actix-web = "4.4.0"
serde = "1.0.193"
serde_json = "1.0.108"
serde_with = "3.4.0"
uuid = { version = "1.6.1", features = ["serde", "v4"] }
env_logger = { version = "0.10.1", features = [] }
log = "0.4.20"
actix-rt = "2.9.0"
chrono = "0.4.31"
reqwest = { version = "0.11.23", features = ["json"] }
svg = "0.14.0"
async-std = "1.12.0"
